--- a/LojaDoSeuManoel/Dockerfile
+++ b/LojaDoSeuManoel/Dockerfile
@@ -1,25 +1,19 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER app
 WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
+EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["LojaDoSeuManoel/LojaDoSeuManoel.csproj", "LojaDoSeuManoel/"]
-RUN dotnet restore "./LojaDoSeuManoel/LojaDoSeuManoel.csproj"
+COPY ["Embalagem.API/Embalagem.API.csproj", "Embalagem.API/"]
+RUN dotnet restore "Embalagem.API/Embalagem.API.csproj"
 COPY . .
-WORKDIR "/src/LojaDoSeuManoel"
-RUN dotnet build "./LojaDoSeuManoel.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/Embalagem.API"
+RUN dotnet build "Embalagem.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./LojaDoSeuManoel.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "Embalagem.API.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "LojaDoSeuManoel.dll"]
+ENTRYPOINT ["dotnet", "Embalagem.API.dll"]
