--- a/LojaDoSeuManoel/Properties/launchSettings.json
+++ b/LojaDoSeuManoel/Properties/launchSettings.json
@@ -34,7 +34,8 @@
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "environmentVariables": {
         "ASPNETCORE_HTTPS_PORTS": "8081",
-        "ASPNETCORE_HTTP_PORTS": "8080"
+        "ASPNETCORE_HTTP_PORTS": "8080",
+        "DB_PASSWORD": "*Batata@123"
       },
       "publishAllPorts": true,
       "useSSL": true
