--- a/LojaDoSeuManoel/appsettings.json
+++ b/LojaDoSeuManoel/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=sqlserver;Database=LojaDoManoelDB;User=sa;Password=%DB_PASSWORD%"
+        "DefaultConnection": "Server=sqlserver;Database=LojaDoSeuManoelDB;User=sa;Password=%DB_PASSWORD%"
     },
     "Logging": {
         "LogLevel": {
