chore: configurações de ambiente para autenticação

--- a/LojaDoSeuManoel/appsettings.json
+++ b/LojaDoSeuManoel/appsettings.json
@@ -8,5 +8,15 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+
+    "Auth": {
+    "Email": "admin@seumanoel.com",
+    "Senha": "admin"
+  },
+  "Jwt": {
+    "SecretKey": "LojaDoSeuManoel@JWT2025#SecretKey",
+    "Issuer": "LojaDoSeuManoel",
+    "Audience": "LojaDoSeuManoel"
+  }
 }
